Wed Dec 14 01:24:55 2011  okkez  <okkez000@gmail.com>

	* thread_pthread.c (rb_thread_create_timer_thread): fix memory
	  leak. [ruby-dev:44904] [Bug #5688]

Wed Dec 14 00:01:15 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (primary): point method name line.  [ruby-core:40936]
	  [Bug #5614]

Tue Dec 13 23:43:48 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* error.c (name_err_mesg_to_str): clear rb_thread_t::errinfo when
	  ignore exception under rb_protect(). [ruby-core:41612] [Bug #5755]

	* test/ruby/test_exception.rb (test_exception_in_name_error_to_str):
	  add a corresponding test.

Tue Dec 13 16:13:29 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (load_unlock): all threads requiring one file should
	  share same loading barrier, so it must be kept alive while those
	  are waiting on it.  [ruby-core:41618] [Bug #5754]

Tue Dec 13 07:30:14 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/webrick/httpresponse.rb (setup_header): 1xx responses
	  are allowed to have Keep-Alive connections.

	* test/webrick/test_httpresponse.rb: corresponding test.

Tue Dec 13 07:13:28 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/webrick/httpresponse.rb (setup_header): 204 and 304 responses
	  are allowed to have a Keep-Alive connection. [ruby-core:41581]

	* test/webrick/test_httpresponse.rb: corresponding test.

Tue Dec 13 06:29:39 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_magic_comment): should pass the proper value.
	  [ruby-dev:44984][Bug #5753]

Tue Dec 13 05:50:07 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_yield_setup_block_args): splat single
	  argument if optional arguments are defined not only mandatory or
	  post arguments.  [ruby-core:41557] [Bug #5730]

Mon Dec 12 22:35:39 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* parse.y (stmt_or_begin): changed the error message for BEGIN not
	  at toplevel.  [ruby-dev:44963] [Bug #5738]
