@@ -1,3 +1,11 @@
+Wed Dec 14 10:20:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* load.c (load_lock): delete the loading barrier if it has been
+	  destroyed.
+
+	* thread.c (rb_barrier_wait): return nil for recursive lock
+	  instead of false, to distinguish it from destroyed barrier.
+
 Wed Dec 14 01:24:55 2011  okkez  <okkez000@gmail.com>
 
 	* thread_pthread.c (rb_thread_create_timer_thread): fix memory
